2007-02-05  Per Persson <persquare@mac.com>

	* configure.in: Testing libreadline for remove_history presence 
	instead of readline to avoid incompatible libedit wrapper.
	
2007-02-05  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (finish_filled_curve):
	Fill between curves is created by a sequence of quadrangles.
	Unfortunately there is a 1-pixel overlap of adjacent quadrangles.
	This causes a regular artifact (vertical stripes) if the fill style is
	transparent solid. This patch tests for the special case and reduces
	the width of each quadrangle by one pixel so that there is no overlap.

2007-02-04  Ethan Merritt  <merritt@u.washington.edu>

	* src/util3d.c (draw3d_line_unconditional):  Clip line segment.
	Fixes, or at least ameliorates, a problem with (unsigned int) terminal
	coordinates going negative for terminals using the code in bitmap.c
	Some day I hope we can replace all terminal coordinates with signed values
	Clipping/interpolation with unsigned coords doesn't work, and causes
	problems all over the place.
	Bug #1649887

2007-02-02  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* configure.in (PKG_CHECK_MODULES):
	* m4/pkg.m4:
	Cleanup configure.in by defining PKG_CHECK_MODULES_NOFAIL in pkg.m4
	instead of copying the default help messages by ourself.

2007-02-02  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* configure.in:
	* src/Makefile.am:
	Use autotools' name transformation mechanism to define GNUPLOT_X11 as
	the installed name for the gnuplot_x11 program. Fix the use of
	--program-prefix and friends at configure time. Bug #997481.

2007-01-31  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm (ENHGD_FLUSH):  libgd 2.0.34 will allow explicit request
	for Adobe Symbol font encoding.  Make use of this to handle transient
	use of Symbol font in enhanced text.  Does not affect older gd versions.

2007-01-29  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.c (get_position_default): Because the same parsing routines